--- a/src/platform/shell/SidebarTree.module.css
+++ b/src/platform/shell/SidebarTree.module.css
@@ -7,8 +7,6 @@
 
 .scroller {
   position: relative;
-  overflow: auto;
-  max-height: 100%;
 }
 
 .row {
